Added legal references

--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -16,6 +16,12 @@
   color:white;
   font-weight:bold;
 }
+
+
+ul {
+    list-style: square;
+    padding-left: 2em;
+}
       </style>
     {% block stylesheets %}
     {% endblock %}
