--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -1,5 +1,26 @@
 {% if incinerateur %}
-<h3 class="title is-3">Synthèse des déclarations de dioxines</h3>
+<h3 class="title is-3">Synthèse des déclarations de dioxines et furannes</h3>
+
+<p>Référence réglementaire : <a href="https://aida.ineris.fr/consultation_document/5277#Annexe_I">AM 20/09/2002, Annexe I d)</a></p>
+
+
+<p>En cas de dépassements sur la mesure en semi-continu des dioxines et furannes, l'exploitant doit :
+<ul>
+  <li>Avertir l'inspection des installations classées dans les meilleurs délais.</li>
+  <li>Faire réaliser un contrôle ponctuel à l'émission des dioxines et furannes par un organisme agréé sous 10 jours.</li>
+  <li>Le résultat des mesures en semi-continu ne permet pas de fonder l'egagement des procédures administratives prévues à l'article L. 514-1 du code de l'environnement.</li>
+</ul>
+
+Références :
+
+<ul>
+    <li>
+    <a href="https://aida.ineris.fr/consultation_document/5277#Article_28_nouveau">Article 28 b1) de l'AM du 20/09/2002</a>
+    </li>
+    <li>la note DGPR du 28 février 2011</li>
+</ul>
+</p>
+
   {% for ligne in incinerateur.lignes %}
     <div style="width: 75%;">
       <h4 class="title is-4">Ligne n°{{ ligne.numero }}</h4>
