--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -84,7 +84,7 @@ function addChart(ligneId) {
             value: 0.1,
             borderColor: "red",
             label: {
-              content: "Seuil : 0.1 ng/m^3",
+              content: 'Seuil : 0.1 ng/m^3. Référence réglementaire : AM 20/09/2002, Annexe I d)',
               enabled: true,
               position: "top"
             }
