fixed CSS structure

--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -5,25 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Aeris{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-      <style type="text/css">
-.menu-container {
-  margin-top: 1em;
-}
-.is-active {
-  background-color: #3273dc;
-}
-.is-active a {
-  color:white;
-  font-weight:bold;
-}
-
-
-ul {
-    list-style: square;
-    padding-left: 2em;
-}
-      </style>
-    {% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/css/app.css') }}">
+    {% block stylesheets %}ss
     {% endblock %}
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="{{ asset('build/static/favicons/android-chrome-192x192.png') }}" />
@@ -36,7 +19,9 @@ ul {
   </section>
   
     {% block body %}{% endblock %}
-    {% block javascripts %}{% endblock %}
+    {% block javascripts %}
+    <script src="{{ asset('build/js/app.js') }}"></script>
+    {% endblock %}
     {% include 'common/piwik.html.twig' %}
   </body>
 </html>
