--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -9,7 +9,7 @@
         <div class="column start-declare-col">
           <a href="{{ path('route_declaration_dioxines') }}" class="declaration-cta button is-primary is-large">Dioxines et furannes</a>
         </div>
-        <div class="column">
+        <div class="column start-declare-col">
           <a href="{{ path('route_declaration_mesures_continues') }}" class="declaration-cta button is-primary is-large">Mesures continues</a>
         </div>
       </div>
