--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Aeris{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ asset('build/css/app.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/js/app.css') }}">
     {% block stylesheets %}ss
     {% endblock %}
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
