--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -1,6 +1,10 @@
 {% if incinerateur %}
 <h3 class="title is-3">Synthèse des déclarations de dioxines et furannes</h3>
 
+<div class="column">
+  <button class="button is-primary tooltip" data-tooltip="Tooltip Text">Tooltip</button>
+</div>
+
 <p>Référence réglementaire : <a href="https://aida.ineris.fr/consultation_document/5277#Annexe_I">AM 20/09/2002, Annexe I d)</a></p>
 
 <p>En cas de dépassements sur la mesure en semi-continu des dioxines et furannes, l'exploitant doit :
