--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -6,7 +6,7 @@
     <title>{% block title %}Aeris{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="{{ asset('build/js/app.css') }}">
-    {% block stylesheets %}ss
+    {% block stylesheets %}
     {% endblock %}
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="{{ asset('build/static/favicons/android-chrome-192x192.png') }}" />
