--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -20,6 +20,7 @@
   
     {% block body %}{% endblock %}
     {% block javascripts %}
+    <script src="{{ asset('build/static/js/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ asset('build/js/app.js') }}"></script>
     {% endblock %}
     {% include 'common/piwik.html.twig' %}
