--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -23,10 +23,11 @@
     </ul>
 
     Références :
-
     <ul>
-        <li>
-        <a href="https://aida.ineris.fr/consultation_document/5277#Article_28_nouveau">Article 28 b1) de l'AM du 20/09/2002</a>
+        <li>Article 28 b1) de l'AM du 20/09/2002</a>
+          <span class="tag is-link">
+            <a href="https://aida.ineris.fr/consultation_document/5277#Article_28_nouveau">lien</a>
+          </span>
         </li>
         <li>la note DGPR du 28 février 2011</li>
     </ul>
