fixed date in form & xlsx templates -> xls

--- a/app/templates/owner/declaration-dioxines.html.twig
+++ b/app/templates/owner/declaration-dioxines.html.twig
@@ -1,6 +1,9 @@
 {% extends "common/base_inside.html.twig" %}
 
 {% block body %}
+<script type="text/javascript">
+</script>
+
   <section class="section">
     <div class="container">
         <h2 class="title is-2">Déclaration de dioxines et furannes</h2>
