better setting for the tawk.to

--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -24,6 +24,7 @@
     <script src="{{ asset('build/js/app.js') }}"></script>
     {% endblock %}
     {% include 'common/piwik.html.twig' %}
+    {% if app.environment == 'prod' %}
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -41,5 +42,6 @@
     })();
     </script>
     <!--End of Tawk.to Script-->
+    {% endif %}
   </body>
 </html>
