--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -8,14 +8,14 @@
     padding-left: 2em;
 }
 body{
-  overflow-x: scroll;
+  overflow-x: scroll !important;
 }
     </style>
 {% endblock %}
 
 {% block body %}
   <section class="section">
-    <div class="container">
+    <div class="container" >
       {% if declaration.declarationMonth %}
     <h2 class="title is-2">Déclaration concernant les rejets durant {{ declaration.declarationMonth|date('m/Y') }} </h2>
     Déclaration effectuée le {{ declaration.createdAt|date('d/m/Y') }}
@@ -54,7 +54,7 @@ body{
           
               <h4 class="title is-4">Déclaration générale</h4>
 
-              <table class="table">
+              <table class="table" >
                 <tbody>
                   {#<tr>
                     <td>Nombre d'heures de fonctionnement théoriques</td>
@@ -68,7 +68,7 @@ body{
               </table>
 
               <h4 class="title is-4">Mesures continues</h3>
-
+              
               <table class="table">
                 <tbody>
                   {% if declarationLigne.declarationCompteursFilename != null %}
@@ -92,35 +92,19 @@ body{
                 </tbody>
               </table>
 
-
+              {#
               {% if reports[declarationLigne.ligne.numero] != null %}
                 
-                  {% if declarationLigne.declarationCompteursFilename != null %}
-                  
-                  {% endif %}
-                  {% if declarationLigne.declarationFluxFilename != null %}
-                  <tr>
-                    <td>Flux</td>
-                    <td><a href="{{ vich_uploader_asset(declarationLigne, 'declarationFluxFile') }}" alt="" >Télécharger</a></td>
-                  </tr>
-                  {% endif %}
-                  {% if declarationLigne.declarationConcentrationsFilename != null %}
-                  <tr>
-                    <td>Concentrations et températures</td>
-                    <td><a href="{{ vich_uploader_asset(declarationLigne, 'declarationConcentrationsFile') }}" alt="" >Télécharger</a></td>
-                  </tr>
-                  {% endif %}
-
                 <table class="table">
-                <tbody>
-
-                
+                <thead>
                 <tr>
-                  <td>Jour</td>
+                  <th>Jour</th>
                   {% for k,v in reports[declarationLigne.ligne.numero].dailyData[1] %}
-                  <td>{{ k }}</td>
+                  <th>{{ k }}</th>
                   {% endfor %}
                 </tr>
+                </thead>
+                <tbody>
                   
                 {% for day,report in reports[declarationLigne.ligne.numero].dailyData %}
                   <tr>
@@ -134,58 +118,10 @@ body{
                 </tbody>
                 </table>
               {% endif %}
-              
+              #}
 
           {% endfor %}
         {% endif %}
-{#
-        {% if not declaration.mesuresDioxine is empty %}
-          <h3 class="title is-3">Declaration dioxines</h3>
-          {% for mesureDioxine in declaration.mesuresDioxine %}
-              {% if mesureDioxine.ligne %}
-              <h4 class="title is-4">Ligne n° {{ mesureDioxine.ligne.numero }}</h4>
-              {% else %}
-              <h4 class="title is-4">ligne</h4>
-              {% endif %}
-
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td>Nom du laboratoire</td>
-                    <td>{{ mesureDioxine.nomLaboratoire }}</td>
-                  </tr>
-                  <tr>
-                    <td>Date de début des mesures</td>
-                    <td>{{ mesureDioxine.dateDebut|date("d/m/Y") }}</td>
-                  </tr>
-                  <tr>
-                    <td>Date de fin des mesures</td>
-                    <td>{{ mesureDioxine.dateFin|date("d/m/Y") }}</td>
-                  </tr>
-                  <tr>
-                    <td>Disponibilité de la ligne sur la période (%) </td>
-                    <td>{{ mesureDioxine.disponibiliteLigne }}</td>
-                  </tr>
-                  <tr>
-                    <td>Disponibilité de l'analyseur sur la période (%) </td>
-                    <td>{{ mesureDioxine.disponibiliteAnalyseur }}</td>
-                  </tr>
-                  <tr>
-                    <td>Concentration des PCDD/PCDF<br/>
-                    (ng NATO I-TEQ/Nm<sup>3</sup> à O<sub>2réf</sub> sur gaz sec)</td>
-                    <td style="background-color:#C7DBD0">{{ mesureDioxine.concentration }}</td>
-                  </tr>
-                  <tr>
-                    <td>Remarques</td>
-                    <td>{{ mesureDioxine.commentaire }}</td>
-                  </tr>
-                </tbody>
-              </table>
-
-          {% endfor %}
-        {% endif %}
-#}
-        
     </div>
 
     </div>
