prepared the dashboard data for a few graphs

--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -1,5 +1,9 @@
 {% if incinerateur %}
 
+<h3 class="title is-3">Synthèse des déclarations de mesures continues</h3>
+
+{{ dump(dashboardReport.graphs[1]) }}
+
 <h3 class="title is-3">Synthèse des déclarations de dioxines et furannes</h3>
 {#
 <div class="column">
