--- a/app/templates/common/dashboard-incinerateur.html.twig
+++ b/app/templates/common/dashboard-incinerateur.html.twig
@@ -1,5 +1,13 @@
 {% if incinerateur %}
 
+<nav class="panel">
+  <p class="panel-tabs">
+    {% for ligne in incinerateur.lignes %}
+      <a class="" href="{{ url('route_dashboard', {'ligne': ligne.numero}) }}">Ligne n°{{ ligne.numero }}</a>
+    {% endfor %}
+  </p>
+</nav>
+
 <h3 class="title is-3">Synthèse des déclarations de mesures continues</h3>
 
 {% for ligne in incinerateur.lignes %}
@@ -13,6 +21,9 @@
     {% endfor %}
   </div>              
 {% endfor %}
+
+
+
 
 <h3 class="title is-3">Synthèse des déclarations de dioxines et furannes</h3>
 {#
